// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithUnit /> by default matches with snapshot 1`] = `
<div
  className="sc-gsnTZi ispxbv k-TextInput__wrapper k-TextInput__wrapper--medium k-TextInput__wrapper--hasUnit"
>
  <input
    className="k-TextInput k-TextInput--hasUnit"
    disabled={false}
    id="TextInputWithUnit"
    name="text"
    onChange={[Function]}
  />
  <span
    className="k-TextInput__unit"
  >
    ƒ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with disabled prop matches with snapshot 1`] = `
<div
  className="sc-gsnTZi ispxbv k-TextInput__wrapper k-TextInput__wrapper--medium k-TextInput__wrapper--hasUnit"
>
  <input
    className="k-TextInput k-TextInput--hasUnit k-TextInput--disabled"
    disabled={true}
    id="TextInputWithUnit"
    name="text"
    onChange={[Function]}
  />
  <span
    className="k-TextInput__unit"
  >
    ƒ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with error prop matches with snapshot 1`] = `
<div
  className="sc-gsnTZi ispxbv k-TextInput__wrapper k-TextInput__wrapper--medium k-TextInput__wrapper--hasUnit"
>
  <input
    className="k-TextInput k-TextInput--hasUnit k-TextInput--error"
    disabled={false}
    id="TextInputWithUnit"
    name="text"
    onChange={[Function]}
  />
  <span
    className="k-TextInput__unit"
  >
    ƒ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with size prop matches with snapshot 1`] = `
<div
  className="sc-gsnTZi ispxbv k-TextInput__wrapper k-TextInput__wrapper--large k-TextInput__wrapper--hasUnit"
>
  <input
    className="k-TextInput k-TextInput--hasUnit"
    disabled={false}
    id="TextInputWithUnit"
    name="text"
    onChange={[Function]}
  />
  <span
    className="k-TextInput__unit"
  >
    ƒ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with unit matches with snapshot 1`] = `
<div
  className="sc-gsnTZi ispxbv k-TextInput__wrapper k-TextInput__wrapper--medium k-TextInput__wrapper--hasUnit"
>
  <input
    className="k-TextInput k-TextInput--hasUnit"
    disabled={false}
    id="TextInputWithUnit"
    name="text"
    onChange={[Function]}
  >
    €
  </input>
  <span
    className="k-TextInput__unit"
  >
    ƒ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with valid prop matches with snapshot 1`] = `
<div
  className="sc-gsnTZi ispxbv k-TextInput__wrapper k-TextInput__wrapper--medium k-TextInput__wrapper--hasUnit"
>
  <input
    className="k-TextInput k-TextInput--hasUnit k-TextInput--valid"
    disabled={false}
    id="TextInputWithUnit"
    name="text"
    onChange={[Function]}
  />
  <span
    className="k-TextInput__unit"
  >
    ƒ
  </span>
</div>
`;
